--- a/app/views/ftf/application/v2-0/activity2b.html
+++ b/app/views/ftf/application/v2-0/activity2b.html
@@ -122,7 +122,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="download.html" aria-describedby="read-declaration-status">
+                <a href="summary" aria-describedby="read-declaration-status">
                   Upload application forms and evidence
                 </a>
               </span>
@@ -163,9 +163,12 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="submit" aria-describedby="eligibility-status">
                   Submit application
+                </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
+              </span>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
 
 
