--- a/app/views/ftf/application/v2-0/download.html
+++ b/app/views/ftf/application/v2-0/download.html
@@ -48,7 +48,7 @@
 
         <img src="/public/images/FTF_application_appendix.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
             <br><br>
-          <p class="govuk-body-s sbi-number">XLSX, 204 KB, 6 pages</p>
+          <p class="govuk-body-s sbi-number">XLSX, 204 KB, 6 tabs</p>
         </span>
 
     <br><br><br>
@@ -71,7 +71,7 @@
     </p>
 
 
-    <p class="govuk-body">When you are ready, you can <a href="/_common/not-testing.html">upload your claim form and evidence</a>  and submit your application.</p>
+    <p class="govuk-body">When you are ready, you can <a href="/_common/not-testing.html">upload your application forms and evidence</a>  and submit your application.</p>
 
 
     <div class="govuk-warning-text">
@@ -97,7 +97,7 @@
             <li>licences and permissions</li>
             <li>project funding</li>
             <li>quotes and tenders</li>
-            <li>VAT exemption</li>
+            <li>VAT in project costs</li>
             <li>plans and drawings</li>
             <li>third-party agreements</li>
             <li>letters of support</li>
@@ -113,7 +113,7 @@
         </button>
       </a>
 
-    {% include "../../_includes/details-block_claim-questions-contact.html" %}
+    {% include "../../_includes/details-block_application-questions-contact.html" %}
 
 </main>
 
