--- a/app/views/ftf/application/v2-0/linked/add.html
+++ b/app/views/ftf/application/v2-0/linked/add.html
@@ -84,7 +84,7 @@
 
 
 <div>
-  <a href="list">
+  <a href="list?01=ready">
     <button class="govuk-button" style="margin-bottom: 20px;">
       Save
     </button>
