--- a/app/views/ftf/application/v2-0/linked/list.html
+++ b/app/views/ftf/application/v2-0/linked/list.html
@@ -33,7 +33,6 @@
       </h1>
       <h2 class="govuk-body" style="margin-top: -20px;">Add accounts for each linked business.</h2>
   
-
       <br>
 
       <ol class="govuk-prototype-kit-task-list">
@@ -42,23 +41,52 @@
           <ul class="govuk-prototype-kit-task-list__items" style="padding-left: 0;">
                   
        
+
+
+            {% if (data['01'] == "ready") %}
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="/ftf/application/v2-0/financial/financial1.html" aria-describedby="eligibility-status">
+                <a href="/ftf/application/v2-0/linked/linkedbiz.html" aria-describedby="eligibility-status">
                   Linked business 1 Ltd
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+            
+            
+            {% elif (data['01'] == "progress") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/ftf/application/v2-0/linked/linkedbiz3.html" aria-describedby="eligibility-status">
+                  Linked business 1 Ltd
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
+            </li>
+            
+            
+            {% elif (data['01'] == "complete") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/ftf/application/v2-0/linked/linkedbiz3.html" aria-describedby="eligibility-status">
+                  Linked business 1 Ltd
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+            
+            {% endif %}
+
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="/ftf/application/v2-0/financial/financial1.html" aria-describedby="eligibility-status">
+                <a href="list2" aria-describedby="eligibility-status">
                   Linked business 2 Ltd
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+
 
 
           </ul>
@@ -68,15 +96,15 @@
 
 
 
-
+<a href="page2.html">
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Edit businesses
   </button>
-
+</a>
 <br>
 
 
-      <a href="upload3">
+      <a href="activity">
         <button class="govuk-button">
           Continue
         </button>
