--- a/app/views/ftf/application/v2-0/upload.html
+++ b/app/views/ftf/application/v2-0/upload.html
@@ -229,7 +229,7 @@
 
 
 
-      <a href="activity">
+      <a href="/ftf/application/v2-0/letters/upload10?10=complete">
         <button class="govuk-button">
           Continue
         </button>
