--- a/app/views/ftf/application/v2-0/check.html
+++ b/app/views/ftf/application/v2-0/check.html
@@ -156,7 +156,7 @@
 
 <br><br>
 
-      <a href="activity3.html">
+      <a href="activity3">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
