--- a/app/views/ftf/application/v2-0/confirmation.html
+++ b/app/views/ftf/application/v2-0/confirmation.html
@@ -25,12 +25,11 @@
         
         
         <div class="govuk-panel govuk-panel--confirmation">
-          <a href="confirmation2.html" style="text-decoration: none; color: inherit;">
             <h1 class="govuk-panel__title">
               Application submitted
             </h1>
-          </a>
-          <br><br>
+         
+          
           <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
           </div>
@@ -41,13 +40,15 @@
         <div style="display: flex; justify-content: space-between; align-items: center;">
           <p class="govuk-body" style="margin: 0;">We have sent you a confirmation email.</p>
         
+
+          <!--
           <a href="javascript:void(0);" onclick="window.print();" style="text-decoration: none;">
             <div style="width: 141px; height: 40px; position: relative;">
               <div style="width: 141px; height: 40px; left: 0px; top: 0px; position: absolute; background: white; border: 1px #BCBDBF solid;"></div>
               <div style="width: 141px; right: 0; top: 8px; position: absolute; text-align: center; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 25px; word-wrap: break-word;">Print this page</div>
             </div>
           </a>
-          
+          -->
         </div>
         
         <br><br>
@@ -103,7 +104,7 @@
 
 
 
-        {% include "../../_includes/details-block_claim-questions-contact.html" %}
+        {% include "../../_includes/details-block_application-questions-contact.html" %}
 
        <br><br>
 
@@ -111,7 +112,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity4.html">Go back to the grant task list</a></p>
+        <a href="activity4">Go back to the grant task list</a></p>
        </p>
 
        
