--- a/app/views/ftf/application/v2-0/activity1c.html
+++ b/app/views/ftf/application/v2-0/activity1c.html
@@ -137,7 +137,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="upload" aria-describedby="eligibility-status">
+                <a href="upload.html" aria-describedby="eligibility-status">
                   Upload application forms and evidence
                 </a>
               </span>
@@ -286,7 +286,6 @@
   </div>
  
 
-  <a href="email2">Move forward</a>
 
 </main>
 
