--- a/app/views/ftf/application/v2-0/check.html
+++ b/app/views/ftf/application/v2-0/check.html
@@ -36,7 +36,7 @@
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Applicant details</h2>
-    <a href="X" style="margin-left: auto;">Change</a>
+    <a href="#" style="margin-left: auto;">Change</a>
   </div>
   
 </dl>
@@ -113,7 +113,7 @@
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Business details</h2>
-    <a href="X" style="margin-left: auto;">Change</a>
+    <a href="#" style="margin-left: auto;">Change</a>
   </div>
   
 </dl>
