--- a/app/views/ftf/application/v2-0/quotes/quotes1a.html
+++ b/app/views/ftf/application/v2-0/quotes/quotes1a.html
@@ -26,7 +26,10 @@
 
 
     <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
-    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Download application forms</h1>
+    <a href="quotes1b.html" style="text-decoration: none;">
+      <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Download application forms</h1>
+    </a>
+
 
     
     <span class="govuk-body"><strong>You should check how many quotes or tenders you need to supply.</strong>
