--- a/app/views/ftf/application/v2-0/summary.html
+++ b/app/views/ftf/application/v2-0/summary.html
@@ -458,7 +458,7 @@
 
 <br><br><br>
 
-      <a href="activity2b?02-03=complete">
+      <a href="activity2?02-03=ready">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
