--- a/app/views/ftf/application/v2-0/activity2.html
+++ b/app/views/ftf/application/v2-0/activity2.html
@@ -122,7 +122,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="download.html" aria-describedby="read-declaration-status">
+                <a href="summary" aria-describedby="read-declaration-status">
                   Upload application forms and evidence
                 </a>
               </span>
