--- a/app/views/ftf/application/v2-0/quotes/upload6.html
+++ b/app/views/ftf/application/v2-0/quotes/upload6.html
@@ -137,7 +137,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="/ftf/application/v2-0/vat/vat1.html" aria-describedby="eligibility-status">
+                <a href="/ftf/application/v2-0/vat/vatq.html" aria-describedby="eligibility-status">
                   VAT in project costs
                 </a>
               </span>
@@ -180,7 +180,7 @@
 
 
 
-      <a href="/ftf/application/v2-0/activity2?02-02=progress">
+      <a href="/ftf/application/v2-0/letters/upload10?10=complete">
         <button class="govuk-button">
           Continue
         </button>
