--- a/app/views/ftf/application/v2-0/third/upload9.html
+++ b/app/views/ftf/application/v2-0/third/upload9.html
@@ -179,7 +179,7 @@
 
 
 
-      <a href="/ftf/application/v2-0/activity2?02-02=progress">
+      <a href="/ftf/application/v2-0/letters/upload10?10=complete">
         <button class="govuk-button">
           Continue
         </button>
