--- a/app/views/ftf/application/v2-0/vat/vat3.html
+++ b/app/views/ftf/application/v2-0/vat/vat3.html
@@ -26,7 +26,7 @@
 
 
     <span class="govuk-caption-xl">Upload evidence</span>
-    <h1 class="govuk-heading-xl">Financial accounts</h1>
+    <h1 class="govuk-heading-xl">VAT in project costs</h1>
   
 
 
