--- a/app/views/ftf/application/v2-0/financial/financial1b.html
+++ b/app/views/ftf/application/v2-0/financial/financial1b.html
@@ -107,7 +107,7 @@
      <script>
         function redirectToPage() {
           // Get the URL of the page you want to navigate to
-          const nextPageURL = 'financial2';
+          const nextPageURL = 'financial2b';
       
           // Redirect to the next page
           window.location.href = nextPageURL;
