--- a/app/views/ftf/application/v2-0/activity4.html
+++ b/app/views/ftf/application/v2-0/activity4.html
@@ -48,7 +48,7 @@
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">You can start your full application.</h2>
 
       <div class="govuk-inset-text">
-        Submit your application by 11:59pm on<strong> 31 March 2024</strong>.
+        Application deadline is 11:59pm on<strong> 31 March 2024</strong>.
       </div>
 
 
