--- a/app/views/ftf/application/v2-0/quotes/quotes1a.html
+++ b/app/views/ftf/application/v2-0/quotes/quotes1a.html
@@ -27,7 +27,7 @@
 
     <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
     <a href="quotes1b.html" style="text-decoration: none;">
-      <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Download application forms</h1>
+      <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Quotes and tenders</h1>
     </a>
 
 
