--- a/app/views/ftf/application/v2-0/activity1b.html
+++ b/app/views/ftf/application/v2-0/activity1b.html
@@ -137,7 +137,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="upload" aria-describedby="eligibility-status">
+                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
                   Upload application forms and evidence
                 </a>
               </span>
