Application Monday update

--- a/app/views/ftf/application/v2-0/activity1.html
+++ b/app/views/ftf/application/v2-0/activity1.html
@@ -115,7 +115,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
-                  Download application form
+                  Download application forms
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -126,7 +126,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
-                  Download application form
+                  Download application forms
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
@@ -145,7 +145,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                Check business information
+                Check your business details
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
             </li>
