--- a/app/views/ftf/application/v2-0/confirmation.html
+++ b/app/views/ftf/application/v2-0/confirmation.html
@@ -112,7 +112,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity4">Go back to the grant task list</a></p>
+        <a href="/_common/not-testing.html">Go back to the task list</a></p>
        </p>
 
        
