--- a/app/views/ftf/application/v2-0/linked/linkedq.html
+++ b/app/views/ftf/application/v2-0/linked/linkedq.html
@@ -104,7 +104,7 @@
       window.location.href = "add";
     } else if (selectedValue === "no") {
       // Redirect to page2.html
-      window.location.href = "upload3?02=complete";
+      window.location.href = "/_common/not-testing.html";
     }
   });
 </script>
