--- a/app/views/ftf/application/v2-0/project/project1.html
+++ b/app/views/ftf/application/v2-0/project/project1.html
@@ -28,9 +28,9 @@
     <span class="govuk-caption-xl">Upload evidence</span>
     <h1 class="govuk-heading-xl">Project funding</h1>
   
-    <p class="govuk-body" style="margin-top: -20px;">You need to provide evidence you can pay for the rest of the project. </p>
+    <p class="govuk-body" style="margin-top: -20px;">You need to provide evidence you can pay for the rest of the project. </p><br>
 
-    <p class="govuk-body" style="margin-top: -20px;">You must add:<br>
+    <p class="govuk-body" style="margin-top: -20px;">This might be:<br>
       <ul class="govuk-list govuk-list--bullet">
         <li>from your own business funds</li>
         <li>a bank loan</li>
