--- a/app/views/ftf/application/v2-0/vat/vatq.html
+++ b/app/views/ftf/application/v2-0/vat/vatq.html
@@ -81,7 +81,7 @@
       window.location.href = "vat1";
     } else if (selectedValue === "no") {
       // Redirect to page2.html
-      window.location.href = "upload7?07=complete";
+      window.location.href = "/_common/not-testing.html";
     }
   });
 </script>
