--- a/app/views/ftf/application/v2-0/activity1b.html
+++ b/app/views/ftf/application/v2-0/activity1b.html
@@ -40,7 +40,7 @@
     <div class="govuk-grid-column-two-thirds">
       
 
-      <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+      <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
       <h1 class="govuk-heading-xl">
         Water Management Grant – Round 3
       </h1>
@@ -115,7 +115,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
-                  Download application form
+                  Download application forms
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -126,7 +126,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="eligibility-status">
-                  Download application form
+                  Download application forms
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
@@ -146,7 +146,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                Check business information
+                Check your business details
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
             </li>
