--- a/app/views/ftf/application/v2-0/activity2.html
+++ b/app/views/ftf/application/v2-0/activity2.html
@@ -40,7 +40,7 @@
     <div class="govuk-grid-column-two-thirds">
       
 
-      <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+      <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
       <h1 class="govuk-heading-xl">
         Water Management Grant – Round 3
       </h1>
@@ -114,7 +114,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="download.html" aria-describedby="read-declaration-status">
-                  Download application form
+                  Download application forms
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
@@ -133,7 +133,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="check" aria-describedby="eligibility-status">
-                  Check business information
+                  Check your business details
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
@@ -143,7 +143,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="check" aria-describedby="eligibility-status">
-                  Check business information
+                  Check your business details
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
@@ -153,7 +153,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="check" aria-describedby="eligibility-status">
-                  Check business information
+                  Check your business details
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
