--- a/app/views/ftf/application/v2-0/check.html
+++ b/app/views/ftf/application/v2-0/check.html
@@ -25,7 +25,7 @@
 
 
     <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
-    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your details</h1>
+    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your business details</h1>
     <span class="govuk-body">Review and confirm the information below is correct.</span>
 
 <br><br><br>
