--- a/app/views/ftf/application/v2-0/download.html
+++ b/app/views/ftf/application/v2-0/download.html
@@ -26,7 +26,7 @@
 
 
     <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
-    <a href="download.html" style="text-decoration: none;">
+    <a href="download2.html" style="text-decoration: none;">
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Download application forms</h1>
     </a>
     
