--- a/app/views/ftf/application/v2-0/letters/lettersq.html
+++ b/app/views/ftf/application/v2-0/letters/lettersq.html
@@ -79,7 +79,7 @@
       window.location.href = "letters1";
     } else if (selectedValue === "no") {
       // Redirect to page2.html
-      window.location.href = "upload10?10=complete";
+      window.location.href = "/_common/not-testing.html";
     }
   });
 </script>
