--- a/app/views/ftf/application/v2-0/linked/list.html
+++ b/app/views/ftf/application/v2-0/linked/list.html
@@ -96,7 +96,7 @@
 
 
 
-<a href="page2.html">
+<a href="/_common/not-testing.html">
   <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Edit businesses
   </button>
