--- a/app/views/ftf/application/v2-0/plans/plans2.html
+++ b/app/views/ftf/application/v2-0/plans/plans2.html
@@ -36,7 +36,7 @@
     </p>
 <br>
 
-    <p class="govuk-body">You should confirm what evidence you need to provide for the <a href="#">Water Management grant (opens in a new tab)</a>.</p>
+    <p class="govuk-body">You should confirm what evidence you need to provide for the <a href="/_common/not-testing.html">Water Management grant (opens in a new tab)</a>.</p>
 
 
     <hr style="margin: 50px 0;">
