--- a/app/views/ftf/claim/v2-0/activity3.html
+++ b/app/views/ftf/claim/v2-0/activity3.html
@@ -122,7 +122,7 @@
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
                 <a href="/_common/not-testing.html" aria-describedby="list-convictions-status">
-                  Check business information
+                  Check your business details
                 </a>
               </span>
               <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="read-declaration-status">Completed</strong>
