--- a/app/views/ftf/application/v2-0/form/form3.html
+++ b/app/views/ftf/application/v2-0/form/form3.html
@@ -27,7 +27,7 @@
 
     <span class="govuk-caption-xl">Upload application forms</span>
     <h1 class="govuk-heading-xl">Application form and appendix</h1>
-    <h2 class="govuk-body" style="margin-top: -20px;">Upload the completed application form and appendix.</h2>
+    <h2 class="govuk-body" style="margin-top: -20px;">Upload the Word application form and Excel appendix.</h2>
 
 
     <div class="govuk-warning-text">
