--- a/app/views/ftf/application/v2-0/letters/upload10.html
+++ b/app/views/ftf/application/v2-0/letters/upload10.html
@@ -37,7 +37,7 @@
       </div>
 
 
-      <p class="govuk-body">You should <a href="/_common/not-testing.html">check the grant manual (opens in a new tab)</a>  to confirm what evidence you need to provide.</p>
+      <p class="govuk-body">You should confirm what evidence you need to provide for the <a href="/_common/not-testing.html">Water Management grant (opens in a new tab)</a>.</p>
 
 
 
