Application - activity list update

--- a/app/views/ftf/application/v2-0/project/project3.html
+++ b/app/views/ftf/application/v2-0/project/project3.html
@@ -94,7 +94,7 @@
 </main>
 
 
-<a href="upload5?05=completed">
+<a href="upload5?05=complete">
   <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
